# mindful-code

./: .env.example  .eslintrc.json  .gitignore  BACKEND_REQUIREMENTS.md  COMPLETION_STATUS.md  Cargo.toml  MVP_REQUIREMENTS.md  PHASES.md  README.md  REQUIREMENTS.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
backend/: Cargo.toml  README.md
backend/benches/: api_performance.rs  flow_detection.rs
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/handlers/: flow.rs  health.rs  mod.rs  websocket.rs
backend/src/models/: flow.rs  mod.rs
backend/src/services/: encryption.rs  flow.rs  ml.rs  mod.rs  wasm.rs
backend/src/utils/: auth.rs  mod.rs
backend/tests/: integration_tests.rs
benches/: api_performance.rs  flow_detection.rs
dashboard/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/public/: index.html
dashboard/src/: App.tsx  index.css  main.tsx  types.ts
dashboard/src/components/: Dashboard.tsx
dashboard/src/utils/: mockData.ts
src/: extension.ts
src/__mocks__/: sqlite3.ts  vscode.ts
src/__tests__/: ActivityTracker.test.ts  Session.test.ts  SessionManager.test.ts
src/models/: Session.ts
src/services/: ActivityTracker.ts  DatabaseService.ts  FlowStateAnalyzer.ts  NotificationService.ts  SessionManager.ts
